--- a/tex/biblioBibTex.bib
+++ b/tex/biblioBibTex.bib
@@ -93,3 +93,41 @@ month = {01},
 pages = {},
 title = {Aerodynamics of the curve-ball: An investigation of the effects of angular velocity on baseball trajectories}
 }
+
+
+https://ggastebois.fr/java/magnus/Magnus_theorie.pdf
+@Unpublished{GGA,
+author = {GASTEBOIS, Gilbert},
+title = {L'effet Magnus},
+note = {https://ggastebois.fr/java/magnus/Magnus\_theorie.pdf},
+}
+
+@article{magnus1853abweichung,
+  title={{\"U}ber die Abweichung der Geschosse—about the deviation of the projectiles},
+  author={Magnus, HG},
+  journal={Poggendorf’s Ann. Phys. Chem.},
+  volume={88},
+  pages={1--28},
+  year={1853}
+}
+
+@article{ASCM11,
+author = {Alam, Firoz and Steiner, Tom and Chowdhury, Harun and Moria, Hazim and Khan, Iftekhar and Aldawi, Fayez and Subic, Aleksandar},
+year = {2011},
+month = {12},
+pages = {226-231},
+title = {A study of golf ball aerodynamic drag},
+volume = {13},
+journal = {Procedia Engineering},
+doi = {10.1016/j.proeng.2011.05.077}
+}
+
+@Article{BLSJ94,
+author = {B. B. Lieberman and S. H. Johnson},
+title = {An analytical model for ball-barrier impact},
+journal = {Proceedings of the 1994 World Scientific Congress of Golf},
+year = {1994},
+volume = {edited by A. J. Cochran and M. R. Farrally E and FN Spon, London},
+pages = {375-380},
+month = {July},
+}
