--- a/tex/Template.tex
+++ b/tex/Template.tex
@@ -133,33 +133,32 @@
     tabsize=5
 }
 
+\renewcommand{\chaptermark}[1]{\markboth{#1}{#1}}
 \fancypagestyle{plain}{
 \fancyhf{}% Clear header/footer
-\renewcommand{\headrulewidth}{0pt}
-\fancyhead[LO,LE]{\includegraphics[width=1cm]{Logo-golfball.jpg}\hrule}
-\fancyhead[RO,RE]{ \textbf{Golf Simulator in Scilab} v0.1 \\}
+\renewcommand{\headrulewidth}{1pt}
+\fancyhead[RO,RE]{ Golf Simulator in Scilab v0.1}
 \fancyhead[CO,CE]{\textcolor{red}{free}}
-\fancyfoot[LO,CE]{\fontsize{8}{11}\selectfont\textit{\begin{center}This document and the information contained herein are the property of Matthieu PHILIPPE.\\They must not be copied or disclosed to third parties without prior written authorization.\end{center}}\begin{flushright}-M\end{flushright}}
+\fancyhead[LO,LE]{\includegraphics[width=0.5cm]{Logo-golfball.jpg}}
+\fancyfoot[LO,CE]{\fontsize{8}{11}\selectfont\textit{\begin{center}This document and the information contained herein are the property of Matthieu PHILIPPE.\\They must not be copied or disclosed to third parties without prior written authorization.\end{center}}\begin{flushright} \end{flushright}}
 }
-
-\renewcommand{\chaptermark}[1]{\markboth{#1}{#1}}
 
 \fancypagestyle{plain2}{
 \fancyhf{}% Clear header/footer
 \renewcommand{\headrulewidth}{0pt}
-\fancyhead[LO,LE]{\includegraphics[width=1cm]{Logo-golfball.jpg}\hrule}
-\fancyhead[RO,RE]{ \textbf{\chaptername\ \thechapter\ --\ \leftmark\ }\\Page \thepage\  / \pageref{LastPage} }
+\fancyhead[LO,LE]{\includegraphics[width=0.5cm]{Logo-golfball.jpg}}
+\fancyhead[RO,RE]{ }
 \fancyhead[CO,CE]{\textcolor{red}{free}}
-\fancyfoot[LO,CE]{\fontsize{8}{11}\selectfont\textit{\begin{center}This document and the information contained herein are the property of Matthieu PHILIPPE.\\They must not be copied or disclosed to third parties without prior written authorization.\end{center}}\begin{flushright}-M\end{flushright}}
+\fancyfoot[LO,CE]{\fontsize{8}{11}\selectfont\textit{\begin{center}This document and the information contained herein are the property of Matthieu PHILIPPE.\\They must not be copied or disclosed to third parties without prior written authorization.\end{center}}\begin{flushright}-\end{flushright}}
 }
 
 \fancypagestyle{plainstar}{
 \fancyhf{}% Clear header/footer
-\renewcommand{\headrulewidth}{0pt}
-\fancyhead[LO,LE]{\includegraphics[width=1cm]{Logo-golfball.jpg}\hrule}
-\fancyhead[RO,RE]{ \textbf{\ }\\Page \thepage\  / \pageref{LastPage} }
+\renewcommand{\headrulewidth}{1pt}
+\fancyhead[LO,LE]{\includegraphics[width=0.5cm]{Logo-golfball.jpg}}
+\fancyhead[RO,RE]{Page \thepage\  / \pageref{LastPage} }
 \fancyhead[CO,CE]{\textcolor{red}{free}}
-\fancyfoot[LO,CE]{\fontsize{8}{11}\selectfont\textit{\begin{center}This document and the information contained herein are the property of Matthieu PHILIPPE.\\They must not be copied or disclosed to third parties without prior written authorization.\end{center}}\begin{flushright}-M\end{flushright}}
+\fancyfoot[LO,CE]{\fontsize{8}{11}\selectfont\textit{\begin{center}This document and the information contained herein are the property of Matthieu PHILIPPE.\\They must not be copied or disclosed to third parties without prior written authorization.\end{center}}\begin{flushright}-\end{flushright}}
 }
 
 
@@ -202,18 +201,32 @@ The simulator uses an ODE (ordinary differential equation) solver from Scilab, t
 
 In the second part, the article presents a method for capturing the speed of the ball in flight using 2 low-cost radars, coupled with an Arduino Mini and an adapted sound card. 
 
-The radar signal is recorded in WAV format and filtered to extract speed and spin information during flight, using spectral density.
+The radar signal is recorded in WAV format and filtered to extract speed and spin information during flight, using power spectral density.
 
 \emph{\textbf{Keywords:} Golf Ball, Simulator, Scilab, Radar, Spectral dentisty.}
 
 \chapter{Introduction}
 After spending a few years playing golf, I wanted to learn more about the dynamics of the interactions between the club, the ball, and the elements. 
 
-Of course, the academic literature and publications were quite abundant. But I came accross articles \cite{PWBJKH76} written in 1976 and \cite{SASDR94} in 1994. The description of the ball's physics pushed me to undertake modeling this system in Scilab. Subsequently, I did it in Java, C++, and then C\# to use it under \emph{Unity game engine}{\textregistered \texttrademark}.
+Of course, the academic literature and publications were quite abundant. But I came accross articles \cite{PWBJKH76} written in 1976 and \cite{SASDR94} in 1994. The description of the ball's physics pushed me to undertake modeling this system in Scilab (fig \ref{fig:hmisimulation}). Subsequently, I did it in Java, C++, and then C\# to use it under \emph{Unity game engine}{\textregistered \texttrademark}.
+
+
+\begin{figure} [H]\centering
+\includegraphics[width=10cm,keepaspectratio, ]{../sci/img/Pasted image 20250120171635.png}
+\caption{HMI Of Simulation}
+\label{fig:hmisimulation}
+\end{figure}
+
 
 When the results were satisfactory, I thought about capturing the flight of a golf ball with instrumentation. After tests with sonar, which were largely insufficient, I took small presence detection radars for automatic doors.
 
-I didn't know what I was getting into, but after a updating my knowledge on signal filtering and a few lines of programming in Scilab, I found a way to capture the essential data. Namely the speed and backspin of the flight of a golf ball.
+I didn't know what I was getting into, but after a updating my knowledge on signal filtering and a few lines of programming in Scilab, I found a way to capture the essential data. Namely the speed and backspin of the flight of a golf ball (figure \ref{fig:radarcapture}).
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250122083320.png}
+\caption{Radar Captures}
+\label{fig:radarcapture}
+\end{figure}
 
 This article describes all items I found, and how I set all them together. Equations, programs, filtering, estimators and electronics compounents to make a Virtual Golf Simulation.
 
@@ -282,9 +295,9 @@ C_d&=&Drag\ Coefficient\ White's\ relation\\
 
 \myremarks{Finally, the equation of the drag Force along the 3-axes becomes \ref{eq:vectordragforce}}{\begin{equation}\label{eq:vectordragforce}
 \overrightarrow{F_d} = \begin{pmatrix}
--\frac{1}{2}.\rho(T).C_d.S.V_{x}^2 \\
--\frac{1}{2}.\rho(T).C_d.S.V_{y}^2 \\
--\frac{1}{2}.\rho(T).C_d.S.V_{z}^2
+-\frac{1}{2}.\rho(T).C_d.S.v_{i}^2 \\
+-\frac{1}{2}.\rho(T).C_d.S.v_{j}^2 \\
+-\frac{1}{2}.\rho(T).C_d.S.v_{k}^2
 \end{pmatrix}
 \end{equation}
 }
@@ -328,11 +341,31 @@ In order to meet my needs, I have choosen to provide my adapted $C_l$ values to 
 \begin{eqnarray}
 C_m &=&0,5 . \rho(T). S. R^2. C_{l1}.\mid{\frac{\omega}{V}}\mid^{0,4}.V\label{eq:magnusforce7}
 \end{eqnarray}
-With my own Club Mizuno JPX and ball  Decthlon :
-\begin{eqnarray}
-C_{l1} &=&'D'  ;'W5'  ;'H3' ;'I5' ;'I6' ;'I7' ;'I8' ;'I9' ;'PW' ;'AW' ;'SW' ;'LW'\\
-&&0.64;0.65;0.54;0.54;0.83;0.42;0.53;0.53;0.52;0.52;0.51;0.51\label{eq:mycl1}
-\end{eqnarray}
+My own $C_{l1}$ from Club Mizuno JPX and Decathlon's ball are given as example in Table \ref{eq:mycl1}.
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|}
+\hline
+\textbf{Club} & \textbf{$C_{l1}$} \\
+\hline
+D & 0.64 \\
+W5 & 0.65 \\
+H3 & 0.54 \\
+I5 & 0.54 \\
+I6 & 0.83 \\
+I7 & 0.42 \\
+I8 & 0.53 \\
+I9 & 0.53 \\
+PW & 0.52 \\
+AW & 0.52 \\
+SW & 0.51 \\
+LW & 0.51 \\
+\hline
+\end{tabular}
+\caption{Table of my $C_{l1}$}
+\label{eq:mycl1}
+\end{table}
 
 \myremarks{Knowing \ref{eq:magnusforce1} and \ref{eq:magnusforce7} and \ref{eq:mycl1}, I chose the following Magnus force model}{\begin{equation}\label{eq:vectormagnusforce}
 \overrightarrow{F_m} = \begin{pmatrix}
@@ -346,7 +379,7 @@ C_m*(\omega_i*v_j-\omega_j*v_i)
 \section{Gravity Force}
 \mydefinitions{The gravity force}{The gravity force is determined by the acceleration \emph{g} to the ground.}
 
-So that, the expression is simply,
+The gravity Force expression is simply,
 \myremarks{The Gravity Force}{\begin{equation}\label{eq:vectorgravityforce}
 \overrightarrow{F_g} = \begin{pmatrix}
 0\\
@@ -374,7 +407,7 @@ Due to the texture we have a loss in energy, that can be taken into account thro
 e&=&0,86\ -\ 0,0029.V_{ci}.cos(\theta)\\
 V_{bfn}&=&V_{ci}.cos(\theta).\frac{1+e}{1+\frac{m}{M}}\\
 V_{bfp}&=&-V_{ci}.\frac{sin(\theta)}{1+\frac{m}{M} + \frac{5}{2}}\\
-\psi_{bo}&=&\theta + tan^{-1}(\frac{V_{bfp}}{V_{bfn}})\\
+\psi_{bo}&=&\theta + \arctan\left(\frac{V_{bfp}}{V_{bfn}}\right)\\
 \omega_{bo}&=&\omega_{bf} = -m.V_{bfp}.\frac{R}{I}
 \end{eqnarray}\myequations{Ball velocity and launch angle after the impact of the golf club}
 
@@ -387,18 +420,18 @@ V_{bfp}&=&Velocity\ of\ the\ golf\ ball,\ parallel\ of\ the\ club\ face\\
 \theta&=&dynamic\ loft\ (\ club\ loft + Shaft\ Lean\ Impact\ <\  loft)\\
 e&=&COR,\ e\simeq0.78\ for\ Irons,\ e\simeq0.83\ for\ Drives\ and\ Woods\\
 \psi_{bo}&=&Launch\ Angle\\
-\omega_{bo}&=&Spin\ of\ the\ glof\ ball\\
+\omega_{bo}&=&Spin\ of\ the\ golf\ ball\\
 I&=&Inertia\ (\ref{eq:massdiameterintertia})
 \end{eqnarray*}
 
-\section{Miss the sweet spot}
-It is difficult to perfectly center the ball and the club. The ball velocity model is modified to include a \emph{Miss} parameter. It is the amount by which the sweet spot is missed. The initial ball velocity is (\ref{eq.miss}),
+\section{Balls Velocity with Miss sweet spot}
+It is difficult to perfectly center the ball and the club. The ball velocity model is modified to include a \emph{Miss} parameter. It is the amount by which the sweet spot is missed, the initial ball velocity in this case is (\ref{eq.miss}),
 \begin{equation}\label{eq.miss}
 V_{bi}=(1-35.56*miss).\sqrt{V_{bfn}^2+V_{bfp}^2}\ (miss\ mesured\ in\ meter)
 \end{equation}\myequations{Intial ball velocity after missed the sweet spot}
 
 \section{Club Face Initial Velocity}
-Due to the Club Path ($\alpha_{cp}$) and the Face to Path and Face Angle ($\gamma_{fp}$), the initial ball velocity and spin is modified.
+Due to the Club Path ($\alpha_{cp}$) and the Face to Path and Face Angle ($\gamma_{fp}$), the initial ball velocity and spin are modified.
 
 \begin{figure} [H]\centering
 \includegraphics[width=12cm,keepaspectratio, ]{clubpath.png}
@@ -406,8 +439,39 @@ Due to the Club Path ($\alpha_{cp}$) and the Face to Path and Face Angle ($\gamm
 \label{fig:clubpath}
 \end{figure}
 
+Ainsi :
+\[
+V_{b0}\cdot\overrightarrow{i} = V_{bi} \cdot (1 - 0.3556 \cdot miss) 
+\cdot \cos(\theta + \arctan\left(\frac{\sin(\theta) \cdot (1 + \frac{m}{M})}{(1 + e) \cdot \cos(\theta) \cdot (1 + \frac{m}{M} + \frac{5}{2})}\right)
+\]
+
+\[
+V_{b0}\cdot\overrightarrow{j} = V_{bi} \cdot (1 - 0.3556 \cdot miss) 
+\cdot \sin(\theta + \arctan\left(\frac{\sin(\theta) \cdot (1 + \frac{m}{M})}{(1 + e) \cdot \cos(\theta) \cdot (1 + \frac{m}{M} + \frac{5}{2})}\right)
+\]
+\[
+V_{b0}\cdot\overrightarrow{k}=0 
+\]
+
+Le spin sur $\overrightarrow{i}$ n'est pas une composante dans l'axe du chemin de club. Le spin est applique sur le plan du sol, SideSpin  est dans l'axe de la face de de club sur $\overrightarrow{j}$, et le BackSpin dans l'axe du chemin de club $\overrightarrow{k}$
+\[
+w_{\overrightarrow{i}} = 0
+\]
+
+\[
+w_{\overrightarrow{j}} = V_{b0}\overrightarrow{j} \cdot sin(\alpha_{cp} - \gamma_{fp}) \cdot Sac.coeffSpinLift(Sac.Type == Club)
+\]
+
+\[
+w_{\overrightarrow{k}} = V_{b0}\overrightarrow{i} \cdot sin(\theta)  \cdot Sac.coeffSpin(Sac.Type == Club)
+\]
+
 \section{Complete Model of flight}
 
+
+\section{External Function for the Ordinary Differential Equation solver}
+
+\chapter{Bouncing and Rolling}
 \section{Ball's characteristics bouncing on the grass}
 \cite{rwlc2010}
 \section{Ball's characteristics rolling on the grass}
@@ -415,11 +479,102 @@ Due to the Club Path ($\alpha_{cp}$) and the Face to Path and Face Angle ($\gamm
 \cite{PA022}
 
 
-\chapter{Golf Ball Capturing}
-\section{section}
-section
-\subsection{subsection}
-subsection
+\chapter{Hardware}
+
+\begin{figure} [H]\centering
+\includegraphics[width=6cm,keepaspectratio, ]{../sci/img/Pasted image 20250123184355.png}
+\caption{The suitecase}
+\label{fig:hw1}
+\end{figure}
+
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/20250123_132304.jpg}
+
+\includegraphics[width=4cm,keepaspectratio, ]{../sci/img/20250123_132310.jpg}
+\includegraphics[width=4cm,keepaspectratio, ]{../sci/img/20250123_132345.jpg}
+\caption{Internal with Arduino, Radar, Amplifier, Audio Boards}
+\label{fig:hw2}
+\end{figure}
+
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/IMG_2427.jpg}
+\caption{Tiny Arduino}
+\label{fig:hw5}
+\end{figure}
+
+
+\begin{figure} [H]\centering
+\includegraphics[width=5cm,keepaspectratio, ]{../sci/img/IMG_2428.jpg}
+\caption{Audio Board}
+\label{fig:hw6}
+\end{figure}
+
+\begin{figure} [H]\centering
+\includegraphics[width=5cm,keepaspectratio, ]{../sci/img/PCB_Back_s.jpg}
+\caption{Audio Amplifier Board}
+\label{fig:hw8}
+\end{figure}
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/IMG_2429.png}
+\caption{Radar Board}
+\label{fig:hw7}
+\end{figure}
+
+
+
+
+\chapter{Data Anlysis}
+
+\section{Filtered Radar Captures}
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250122083320.png}
+\caption{Wav Radar Captures and its echo}
+\label{fig:wavradarcapture}
+\end{figure}
+
+
+\subsection{Filtering}
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250122082849.png}
+\caption{Captured Raw Data Wav}
+\label{fig:rawcapture}
+\end{figure}
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250122082913.png}
+\caption{FFT of Filtered Raw Data}
+\label{fig:rawfft}
+\end{figure}
+
+\subsection{Final Result}
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250120172502.png}
+\caption{My power density Algorithm Results to identify Speed and BackSpin}
+\label{fig:radarcapture}
+\end{figure}
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250122082958.png}
+\caption{Results of normalized mean filtered power spectral density}
+\label{fig:filtered power density results}
+\end{figure}
+
+\begin{figure} [H]\centering
+\includegraphics[width=12cm,keepaspectratio, ]{../sci/img/Pasted image 20250122083851.png}
+\caption{Results of the filtered Density and caracteristics identification}
+\label{fig:identifycarac}
+\end{figure}
+
+\begin{figure} [H]\centering
+\includegraphics[width=8cm,keepaspectratio, ]{../sci/img/Pasted image 20250217094457.png}
+\caption{Speed and Backspin echos}
+\label{fig:identifycarac}
+\end{figure}
+
 
 \chapter{Listings}
 \section{Golfball.sci}
